# MJobos

./: .clang-format  .clang-tidy  .cmake-format.yaml  CMakeLists.txt  CREDITS.md  Phobos.vcxproj  README.md
.github/workflows/: clang-format-check.yml  clang-tidy-check.yml
docs/: Fixed-or-Improved-Logics.md  New-or-Enhanced-Logics.md  Whats-New.md
src/: Phobos.cpp
src/Ext/AnimType/: Body.cpp
src/Ext/Building/: Hooks.cpp
src/Ext/BuildingType/: Body.cpp  Body.h
src/Ext/Bullet/: Body.cpp  Hooks.DetonateLogics.cpp  Hooks.cpp
src/Ext/BulletType/: Body.cpp  Body.h
src/Ext/House/: Body.cpp  Body.h  Hooks.cpp
src/Ext/Rules/: Body.cpp  Body.h
src/Ext/SWType/: Body.cpp  Body.h
src/Ext/Techno/: Body.cpp  Body.h  Hooks.Firing.cpp  Hooks.Misc.cpp  Hooks.cpp
src/Ext/TechnoType/: Body.cpp  Body.h
src/Ext/WarheadType/: Body.cpp  Body.h  Detonate.cpp  Hooks.cpp
src/Ext/WeaponType/: Body.cpp  Body.h
src/Misc/: Hooks.BugFixes.cpp  Hooks.UI.cpp
src/Utilities/: Helpers.Alex.h
